Completed the website

--- a/pages/voorgerecht.html
+++ b/pages/voorgerecht.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../styles/style.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-<title>Gehaktbrood recept</title>
+<title>Caprese salade met perzik recept</title>
 </head>
 <body>
 <div id="pagina">
@@ -15,6 +15,25 @@
 <h1 id="title">Caprese salade met perzik</h1>
 <a id="first">De klassieke caprese salade kent iedereen wel, maar met deze variant met gekarameliseerde perzik en rucola kun je iedereen verrassen! </a>
   <h1 class="subtitle">Ingrediënten</h1>
+<ul class="Lists">
+    <li class="firstList">3 perziken</li>
+    <li class="firstList">2 eetlepels honing</li>
+    <li class="firstList">1 eetlepel pijnboompitten</li>
+    <li class="firstList">een flinke hand rucola</li>
+    <li class="firstList">2 eetlepels balsamico azijn</li>
+    <li class="firstList">een handje pijnboompitten</li>
+    <li class="firstList">een snuf zeezout</li>
+</ul>
+<h1 class="subtitle">Bereidingswijze</h1>
+<ol class="Lists">
+        <li class="secondList">Verwarm de oven voor op 200 graden Celcius</li>
+        <li class="secondList">Halveer de perziken, verwijder de pitten en snij ze in plakjes.</li>
+        <li class="secondList">Bestrijk de perziken met de honing. Leg ze op een beklede bakplaat en zet 20 minuten in de oven todat de perziken goudbruin zijn.</li>
+        <li class="secondList">Snijd de mozzarella in plakken. Maak de salade op door dakpansgewijs de plakken perzik en mozzzarella op een bord te leggen, met daaromheen de rucola.</li>
+        <li class="secondList">Besprenkel de caprese salade met de balsamico azijn en maak hem af door een klein beetje zeezout en wat pijnboompitten overheen te strooien.</li>
+</ol>
+<img src="../images/voorgerecht.png">
 </div>
+<br>
 </body>
 </html>
